[gd_scene load_steps=6 format=3 uid="uid://cgshopm0ome8b"]

[ext_resource type="Texture2D" uid="uid://bwswyp5u1hmst" path="res://assets/table/arrow.png" id="1_23mql"]
[ext_resource type="Shader" path="res://shaders/shader.gdshader" id="2_2aqh6"]
[ext_resource type="Script" path="res://components/arrow.gd" id="2_i8io3"]
[ext_resource type="PackedScene" uid="uid://d1vri2m1wvvey" path="res://shaders/fx.tscn" id="4_bdt8w"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5fn0u"]
shader = ExtResource("2_2aqh6")
shader_parameter/LABEL = false
shader_parameter/POST_PROCESSING = false
shader_parameter/MOUSE = Vector2(20, 20)
shader_parameter/DISABLE = false
shader_parameter/use_exclude_colors = true
shader_parameter/exclude_color1 = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/exclude_color2 = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/exclude_color3 = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/exclude_color4 = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/exclude_color5 = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/exclude_color6 = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/exclude_color7 = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/exclude_color8 = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/displace_x = 0
shader_parameter/displace_y = 0
shader_parameter/displace_repeat = true
shader_parameter/auto_pan_speed = Vector2(0, 0)
shader_parameter/replace_color1 = Color(0, 0, 0, 1)
shader_parameter/replace_with_color1 = Color(0, 0, 0, 1)
shader_parameter/replace_color2 = Color(0, 0, 0, 1)
shader_parameter/replace_with_color2 = Color(0, 0, 0, 1)
shader_parameter/replace_color3 = Color(0, 0, 0, 1)
shader_parameter/replace_with_color3 = Color(0, 0, 0, 1)
shader_parameter/replace_color4 = Color(0, 0, 0, 1)
shader_parameter/replace_with_color4 = Color(0, 0, 0, 1)
shader_parameter/replace_color5 = Color(0, 0, 0, 1)
shader_parameter/replace_with_color5 = Color(0, 0, 0, 1)
shader_parameter/replace_color_outline = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/replace_with_color_outline = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/auto_replace_color = Color(0, 0, 0, 1)
shader_parameter/auto_replace_replace_original_color = false
shader_parameter/auto_replace_replace_original_color_with = Color(0, 0, 0, 1)
shader_parameter/auto_replace_to_color = Color(0, 0, 0, 1)
shader_parameter/auto_replace_speed = 0.0
shader_parameter/auto_replace_start_time = 0.0
shader_parameter/tint_color = Color(0, 0, 0, 1)
shader_parameter/tint_strength = 0.0
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_strength = 0.0
shader_parameter/auto_flash_color = Color(1, 1, 1, 1)
shader_parameter/auto_flash_speed = 0.0
shader_parameter/auto_flash_bound1 = 0.0
shader_parameter/auto_flash_bound2 = 1.0
shader_parameter/auto_flash_start_time = 0.0
shader_parameter/red_correct = 0.0
shader_parameter/green_correct = 0.0
shader_parameter/blue_correct = 0.0
shader_parameter/gray_correct = 0.0
shader_parameter/brightness_correct = 1.0
shader_parameter/contrast_correct = 1.0
shader_parameter/saturation_correct = 1.0
shader_parameter/scanline_color = Color(0.98, 0.69, 0.23, 1)
shader_parameter/scanline_strength = 1.0
shader_parameter/scanline_left_to_right_position = -0.001
shader_parameter/scanline_top_to_bottom_position = -0.001
shader_parameter/scanline_topleft_to_bottomright_position = -0.001
shader_parameter/scanline_topright_to_bottomleft_position = -0.001
shader_parameter/auto_scanline_left_to_right_on = false
shader_parameter/auto_scanline_left_to_right_reverse = false
shader_parameter/auto_scanline_left_to_right_start_time = 0.0
shader_parameter/auto_scanline_left_to_right_scan_duration = 0.5
shader_parameter/auto_scanline_left_to_right_delay = 1.0
shader_parameter/auto_scanline_top_to_bottom_on = false
shader_parameter/auto_scanline_top_to_bottom_reverse = false
shader_parameter/auto_scanline_top_to_bottom_start_time = 0.0
shader_parameter/auto_scanline_top_to_bottom_scan_duration = 0.5
shader_parameter/auto_scanline_top_to_bottom_delay = 1.0
shader_parameter/auto_scanline_topleft_to_bottomright_on = false
shader_parameter/auto_scanline_topleft_to_bottomright_reverse = false
shader_parameter/auto_scanline_topleft_to_bottomright_start_time = 0.0
shader_parameter/auto_scanline_topleft_to_bottomright_scan_duration = 0.5
shader_parameter/auto_scanline_topleft_to_bottomright_delay = 1.0
shader_parameter/auto_scanline_topright_to_bottomleft_on = false
shader_parameter/auto_scanline_topright_to_bottomleft_reverse = false
shader_parameter/auto_scanline_topright_to_bottomleft_start_time = 0.0
shader_parameter/auto_scanline_topright_to_bottomleft_scan_duration = 0.5
shader_parameter/auto_scanline_topright_to_bottomleft_delay = 1.0
shader_parameter/glow_color = Color(1, 1, 1, 1)
shader_parameter/glow_thickness = 0
shader_parameter/glow_diagonals = false
shader_parameter/auto_glow_speed = 0.0
shader_parameter/auto_glow_bound = 0.75
shader_parameter/auto_glow_start_time = 0.0
shader_parameter/disintegrate_seed = 1
shader_parameter/disintegrate_color = Color(0, 0, 0, 1)
shader_parameter/disintegrate_strength = 0.0
shader_parameter/disintegrate_alpha_bound1 = 0.0
shader_parameter/disintegrate_alpha_bound2 = 0.0
shader_parameter/disintegrate_as_static = false
shader_parameter/auto_disintegrate_random_seed_speed = 0.0
shader_parameter/fog_enabled = false
shader_parameter/fog_opacity = 0.5
shader_parameter/fog_density = 0.25
shader_parameter/fog_speed = Vector2(-0.02, 0)
shader_parameter/vertical_colorline_color = Color(1, 0.415686, 1, 1)
shader_parameter/vertical_colorline_spacing = 2
shader_parameter/vertical_colorline_strength = 0.05
shader_parameter/horizontal_colorline_color = Color(1, 1, 1, 1)
shader_parameter/horizontal_colorline_spacing = 2
shader_parameter/horizontal_colorline_strength = 0.0
shader_parameter/checker_color = Color(0.2, 0.2, 0.2, 1)
shader_parameter/checker_strength = 0.0
shader_parameter/checker_x_size = 1
shader_parameter/checker_y_size = 1
shader_parameter/checker_x_pattern = 2
shader_parameter/checker_y_pattern = 2
shader_parameter/checker_contrast_amount = 1.0
shader_parameter/checker_contrast_ratio = 0.5
shader_parameter/mouselight_on = false
shader_parameter/mouselight_color = Color(1, 1, 1, 1)
shader_parameter/mouselight_strength = 0.5
shader_parameter/mouselight_size = 8
shader_parameter/mouselight_soften_edges = true
shader_parameter/mouselight_checker = false
shader_parameter/auto_mouselight_flicker_speed = 8.0
shader_parameter/auto_mouselight_flicker_bound = 10.0
shader_parameter/cut_left = 0.0
shader_parameter/cut_right = 0.0
shader_parameter/cut_top = 0.0
shader_parameter/cut_bottom = 0.0
shader_parameter/vignette_on = false
shader_parameter/vignette_layer = false
shader_parameter/vignette_ignore_transparent = false
shader_parameter/vignette_color = Color(0, 0, 0, 1)
shader_parameter/vignette_radius = 1.0
shader_parameter/vignette_edge_softness = 0.0
shader_parameter/vignette_contrast = 1.0
shader_parameter/vignette_aspect_x = 1.0
shader_parameter/vignette_aspect_y = 1.0
shader_parameter/vignette_pulse_enable = false
shader_parameter/vignette_pulse_amplitude = 0.1
shader_parameter/vignette_pulse_speed = 0.5
shader_parameter/transparency = 1.0
shader_parameter/auto_flicker_speed = 0.0
shader_parameter/auto_flicker_bound = 0.0
shader_parameter/auto_flicker_start_time = 0.0

[node name="Arrow" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 58.0
offset_bottom = 15.0
mouse_filter = 2
script = ExtResource("2_i8io3")

[node name="Sprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_5fn0u")
texture = ExtResource("1_23mql")
centered = false

[node name="FX" parent="Sprite" instance=ExtResource("4_bdt8w")]

[node name="ClickableArea" type="Area2D" parent="."]

[node name="Polygon" type="CollisionPolygon2D" parent="ClickableArea"]
position = Vector2(8, -15)
polygon = PackedVector2Array(43, 16, 51, 22, 51, 24, 42, 31, -7, 31, -7, 16)

[connection signal="input_event" from="ClickableArea" to="." method="_on_clickable_area_input_event"]
[connection signal="mouse_entered" from="ClickableArea" to="." method="_on_clickable_area_mouse_entered"]
[connection signal="mouse_exited" from="ClickableArea" to="." method="_on_clickable_area_mouse_exited"]
